--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
-*.FASL
-*.fasl
-*.lisp-temp
-*.dfsl
-*.pfsl
-*.d64fsl
-*.p64fsl
-*.lx64fsl
-*.lx32fsl
-*.dx64fsl
-*.dx32fsl
-*.fx64fsl
-*.fx32fsl
-*.sx64fsl
-*.sx32fsl
-*.wx64fsl
-*.wx32fsl
+lisp/*.FASL
+lisp/*.fasl
+lisp/*.lisp-temp
+lisp/*.dfsl
+lisp/*.pfsl
+lisp/*.d64fsl
+lisp/*.p64fsl
+lisp/*.lx64fsl
+lisp/*.lx32fsl
+lisp/*.dx64fsl
+lisp/*.dx32fsl
+lisp/*.fx64fsl
+lisp/*.fx32fsl
+lisp/*.sx64fsl
+lisp/*.sx32fsl
+lisp/*.wx64fsl
+lisp/*.wx32fsl
+lisp/part1
+lisp/part2
