Fixed names on the differnet files.

--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -1,10 +1,10 @@
-all: kivraPart1 kivraPart2
+all: part1 part2
 
-kivraPart1: kivraPart1.lisp
+part1: part1.lisp makePart2.lisp
 	./makePart1.lisp
 
-kivraPart2: kivraPart2.lisp
+part2: part2.lisp makePart2.lisp
 	./makePart2.lisp
 
 clean:
-	rm -v kivraPart1 kivraPart1.fasl kivraPart2 kivraPart2.fasl
+	rm -v part1 part1.fasl part2 part2.fasl
