Added erlang files to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Lisp:
 lisp/*.FASL
 lisp/*.fasl
 lisp/*.lisp-temp
@@ -17,3 +18,22 @@ lisp/*.wx64fsl
 lisp/*.wx32fsl
 lisp/part1
 lisp/part2
+
+# Erlang:
+.eunit
+*.o
+*.beam
+*.plt
+erl_crash.dump
+.concrete/DEV_MODE
+
+# rebar 2.x
+.rebar
+rel/example_project
+ebin/*.beam
+deps
+
+# rebar 3
+.rebar3
+_build/
+_checkouts/
